Added styles to header

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,3 +1,4 @@
 {
-    "presentation": "Hi, I am Jose Maria, Chema for my friends"
+    "presentation": "Hello! I'm José María, Chema to my friends.",
+    "developer": "Besides being a writer, passionate about video games, reading, and anime, I'm also a web developer specializing in front-end but with extensive knowledge of back-end."
 }
