--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,3 +1,4 @@
 {
-    "presentation": "¡Hola! Soy José María, Chema para mis amigos"
+    "presentation": "¡Hola! Soy José María, Chema para mis amigos.",
+    "developer": "A parte de escritor, apasionado de los videojuegos, la lectura y el anime también soy desarrollador web especializado en frontend pero con amplios conocimientos de backend."
 }
