Added social media grid

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,4 @@
 {
     "presentation": "Hello! I'm José María, Chema to my friends.",
-    "developer": "Besides being a writer, passionate about video games, reading, and anime, I'm also a web developer specializing in front-end but with extensive knowledge of back-end."
+    "developer": "Besides being a writer, passionate about video games, reading, and anime, I'm also a web developer specializing in front-end and extensive knowledge of back-end."
 }
