--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,7 @@
 {
     "presentation": "Hello! I'm José María, Chema to my friends.",
-    "developer": "Besides being a writer, passionate about video games, reading, and anime, I'm also a web developer specializing in front-end and extensive knowledge of back-end."
+    "developer": "Besides being a writer, passionate about video games, reading, and anime, I'm also a web developer specializing in front-end and extensive knowledge of back-end.",
+    "aboutMe": "About me",
+    "resumeAboutMe": "I have extensive experience in front-end development, especially with React. I've also worked with WordPress for much of my career, so I'm also well-versed in the backend.",
+    "whatCouldIApport":""
 }
