--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -5,5 +5,8 @@
     "resumeAboutMe": "Tengo una gran experiencia en desarrollo frontend, sobretodo con React. Además durante gran parte de mi carrera he trabajado con Wordpress por lo que tengo un gran manejo del backend también.",
     "skills": "Skills",
     "level": "Nivel",
-    "experience": "Experiencia"
+    "experience": "Experiencia",
+    "mainProjects": "Proyectos principales",
+    "subYourVideoTitle": "Subtitula tu video",
+    "subYourVideoDescription" : "Subtitula tu video gracias a la transcripción generada por la IA."
 }
