Added link to project and download cv to about me

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,6 +8,7 @@
     "experience": "Experience",
     "mainProjects": "Main projects",
     "subYourVideoTitle": "Subtitule your video",
-    "subYourVideoDescription" : "Subtitule your video based in our IA transcription."
+    "subYourVideoDescription" : "Subtitule your video based in our IA transcription.",
+    "downloadCV": "Download my CV"
 
 }
