--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -8,5 +8,6 @@
     "experience": "Experiencia",
     "mainProjects": "Proyectos principales",
     "subYourVideoTitle": "Subtitula tu video",
-    "subYourVideoDescription" : "Subtitula tu video gracias a la transcripción generada por la IA."
+    "subYourVideoDescription" : "Subtitula tu video gracias a la transcripción generada por la IA.",
+    "downloadCV": "Descarga mi CV"
 }
